[package]
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>", "Markus Stange <mstange.moz@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
name = "pdb-addr2line"
version = "0.1.0"

[dependencies]
bitflags = "*"
maybe-owned = "0.3.4"
pdb = "0.7.0"
thiserror = "*"
range-collections = "0.1.1"

[dev-dependencies]
getopts = "0.2.21"
msvc-demangler = "0.8.0"
clap = "2"
memmap2 = "0.2.2"
